# lpcl-cricclubs-bot-context

./: .env  .env.backup  .env.example  INITIAL.md  data-ball-by-ball.json  pyproject.toml  pytest.ini  requirements.txt  schema-ball_by_ball.json  schema_matches.json  streamlit_app.py
.claude/: settings.local.json
PRPs/: cricket-insight-agent.md
analytics/: __init__.py  batting_stats.py  bowling_stats.py  match_analysis.py  team_performance.py
cricket_agent/: __init__.py  agent.py  config.py  prompts.py  tools.py
docker/: .dockerignore  Dockerfile.agent  Dockerfile.mcp  docker-compose.yml
mcp_server/: __init__.py  connection.py  security.py  server.py
schema/: ball_by_ball.yaml  collections.yaml  matches.yaml  players.yaml
tests/: __init__.py  test_agent.py  test_analytics.py  test_mcp_server.py  test_schema_drift.py
vector_store/: __init__.py  embeddings.py
